--- a/Configurator 2.0/Configurator 2.0.csproj
+++ b/Configurator 2.0/Configurator 2.0.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
+    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -27,7 +27,7 @@
         <IsWebBootstrapper>false</IsWebBootstrapper>
         <UseApplicationTrust>false</UseApplicationTrust>
         <BootstrapperEnabled>true</BootstrapperEnabled>
-        <TargetFrameworkProfile/>
+        <TargetFrameworkProfile />
         <NuGetPackageImportStamp>
         </NuGetPackageImportStamp>
     </PropertyGroup>
@@ -65,7 +65,7 @@
             <HintPath>..\..\..\..\..\..\..\Program Files (x86)\SOLIDWORKS PDM\EPDM.Interop.epdm.dll</HintPath>
             <EmbedInteropTypes>True</EmbedInteropTypes>
         </Reference>
-        <Reference Include="Microsoft.VisualBasic"/>
+        <Reference Include="Microsoft.VisualBasic" />
         <Reference Include="MongoDB.Bson, Version=2.14.1.0, Culture=neutral, processorArchitecture=MSIL">
             <HintPath>..\packages\MongoDB.Bson.2.14.1\lib\net472\MongoDB.Bson.dll</HintPath>
         </Reference>
@@ -81,12 +81,12 @@
         <Reference Include="SharpCompress, Version=0.30.1.0, Culture=neutral, PublicKeyToken=afb0a02973931d96, processorArchitecture=MSIL">
             <HintPath>..\packages\SharpCompress.0.30.1\lib\net461\SharpCompress.dll</HintPath>
         </Reference>
-        <Reference Include="System"/>
+        <Reference Include="System" />
         <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
             <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
         </Reference>
-        <Reference Include="System.ComponentModel.Composition"/>
-        <Reference Include="System.Core"/>
+        <Reference Include="System.ComponentModel.Composition" />
+        <Reference Include="System.Core" />
         <Reference Include="System.Data.OleDb, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
             <HintPath>..\packages\System.Data.OleDb.6.0.0\lib\net461\System.Data.OleDb.dll</HintPath>
         </Reference>
@@ -103,7 +103,7 @@
             <Private>True</Private>
             <Private>True</Private>
         </Reference>
-        <Reference Include="System.Numerics"/>
+        <Reference Include="System.Numerics" />
         <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
             <HintPath>..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
         </Reference>
@@ -143,14 +143,14 @@
         <Reference Include="System.Text.Encoding.CodePages, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
             <HintPath>..\packages\System.Text.Encoding.CodePages.5.0.0\lib\net461\System.Text.Encoding.CodePages.dll</HintPath>
         </Reference>
-        <Reference Include="System.Xml.Linq"/>
-        <Reference Include="System.Data.DataSetExtensions"/>
-        <Reference Include="Microsoft.CSharp"/>
-        <Reference Include="System.Data"/>
-        <Reference Include="System.Deployment"/>
-        <Reference Include="System.Drawing"/>
-        <Reference Include="System.Windows.Forms"/>
-        <Reference Include="System.Xml"/>
+        <Reference Include="System.Xml.Linq" />
+        <Reference Include="System.Data.DataSetExtensions" />
+        <Reference Include="Microsoft.CSharp" />
+        <Reference Include="System.Data" />
+        <Reference Include="System.Deployment" />
+        <Reference Include="System.Drawing" />
+        <Reference Include="System.Windows.Forms" />
+        <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="addComponent.cs">
@@ -171,21 +171,22 @@
         <Compile Include="addOption.Designer.cs">
             <DependentUpon>addOption.cs</DependentUpon>
         </Compile>
+        <Compile Include="Component.cs" />
         <Compile Include="Configurator.cs">
             <SubType>Form</SubType>
         </Compile>
         <Compile Include="Configurator.Designer.cs">
             <DependentUpon>Configurator.cs</DependentUpon>
         </Compile>
-        <Compile Include="dataTypes.cs"/>
-        <Compile Include="checkListGen.cs"/>
+        <Compile Include="dataTypes.cs" />
+        <Compile Include="checkListGen.cs" />
         <Compile Include="helpForm.cs">
             <SubType>Form</SubType>
         </Compile>
         <Compile Include="helpForm.Designer.cs">
             <DependentUpon>helpForm.cs</DependentUpon>
         </Compile>
-        <Compile Include="Globals.cs"/>
+        <Compile Include="Globals.cs" />
         <Compile Include="LoadingForm.cs">
             <SubType>Form</SubType>
         </Compile>
@@ -198,9 +199,9 @@
         <Compile Include="machineSearch.Designer.cs">
             <DependentUpon>machineSearch.cs</DependentUpon>
         </Compile>
-        <Compile Include="Program.cs"/>
-        <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Utilities.cs"/>
+        <Compile Include="Program.cs" />
+        <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="Utilities.cs" />
         <EmbeddedResource Include="addComponent.resx">
             <DependentUpon>addComponent.cs</DependentUpon>
         </EmbeddedResource>
@@ -232,13 +233,13 @@
             <DependentUpon>Resources.resx</DependentUpon>
             <DesignTime>True</DesignTime>
         </Compile>
-        <None Include="Core\Compression\Snappy\lib\linux\libsnappy64.so"/>
-        <None Include="Core\Compression\Snappy\lib\osx\libsnappy64.dylib"/>
-        <None Include="Core\Compression\Zstandard\lib\linux\libzstd.so"/>
-        <None Include="Core\Compression\Zstandard\lib\osx\libzstd.dylib"/>
-        <None Include="libmongocrypt.dylib"/>
-        <None Include="libmongocrypt.so"/>
-        <None Include="packages.config"/>
+        <None Include="Core\Compression\Snappy\lib\linux\libsnappy64.so" />
+        <None Include="Core\Compression\Snappy\lib\osx\libsnappy64.dylib" />
+        <None Include="Core\Compression\Zstandard\lib\linux\libzstd.so" />
+        <None Include="Core\Compression\Zstandard\lib\osx\libzstd.dylib" />
+        <None Include="libmongocrypt.dylib" />
+        <None Include="libmongocrypt.so" />
+        <None Include="packages.config" />
         <None Include="Properties\Settings.settings">
             <Generator>SettingsSingleFileGenerator</Generator>
             <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -250,7 +251,7 @@
         </Compile>
     </ItemGroup>
     <ItemGroup>
-        <None Include="App.config"/>
+        <None Include="App.config" />
     </ItemGroup>
     <ItemGroup>
         <COMReference Include="Microsoft.Office.Core">
@@ -312,22 +313,22 @@
         </BootstrapperPackage>
     </ItemGroup>
     <ItemGroup>
-        <Content Include="Configurator_Icon.ico"/>
-        <Content Include="Core\Compression\Snappy\lib\win\snappy32.dll"/>
-        <Content Include="Core\Compression\Snappy\lib\win\snappy64.dll"/>
-        <Content Include="Core\Compression\Zstandard\lib\win\libzstd.dll"/>
-        <Content Include="mongocrypt.dll"/>
+        <Content Include="Configurator_Icon.ico" />
+        <Content Include="Core\Compression\Snappy\lib\win\snappy32.dll" />
+        <Content Include="Core\Compression\Snappy\lib\win\snappy64.dll" />
+        <Content Include="Core\Compression\Zstandard\lib\win\libzstd.dll" />
+        <Content Include="mongocrypt.dll" />
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
-    <Import Project="..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets" Condition="Exists('..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets')"/>
+    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Import Project="..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets" Condition="Exists('..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets')" />
     <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
         <PropertyGroup>
             <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them. For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
         </PropertyGroup>
-        <Error Condition="!Exists('..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets'))"/>
-        <Error Condition="!Exists('..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets'))"/>
+        <Error Condition="!Exists('..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MongoDB.Libmongocrypt.1.3.0\build\MongoDB.Libmongocrypt.targets'))" />
+        <Error Condition="!Exists('..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets'))" />
     </Target>
-    <Import Project="..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets" Condition="Exists('..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets')"/>
+    <Import Project="..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets" Condition="Exists('..\packages\MongoDB.Driver.Core.2.14.1\build\MongoDB.Driver.Core.targets')" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
          Other similar extension points exist, see Microsoft.Common.targets.
     <Target Name="BeforeBuild">
