--- a/Configurator 2.0/Configurator 2.0.csproj
+++ b/Configurator 2.0/Configurator 2.0.csproj
@@ -158,29 +158,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="addComponent.cs">
+    <Compile Include="addEditOptionForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="addComponent.Designer.cs">
-      <DependentUpon>addComponent.cs</DependentUpon>
-    </Compile>
-    <Compile Include="addMachine.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="addMachine.Designer.cs">
-      <DependentUpon>addMachine.cs</DependentUpon>
-    </Compile>
-    <Compile Include="addOption.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="addOption.Designer.cs">
-      <DependentUpon>addOption.cs</DependentUpon>
+    <Compile Include="addEditOptionForm.Designer.cs">
+      <DependentUpon>addEditOptionForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Configurator.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Configurator.Designer.cs">
       <DependentUpon>Configurator.cs</DependentUpon>
+    </Compile>
+    <Compile Include="databaseViewer.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="databaseViewer.Designer.cs">
+      <DependentUpon>databaseViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="dataTypes.cs" />
     <Compile Include="checkListGen.cs" />
@@ -198,26 +192,29 @@
     <Compile Include="LoadingForm.Designer.cs">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="machineSearch.cs">
+    <Compile Include="newCompDataForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="machineSearch.Designer.cs">
-      <DependentUpon>machineSearch.cs</DependentUpon>
+    <Compile Include="newCompDataForm.Designer.cs">
+      <DependentUpon>newCompDataForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="newOptionGroupForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="newOptionGroupForm.Designer.cs">
+      <DependentUpon>newOptionGroupForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
-    <EmbeddedResource Include="addComponent.resx">
-      <DependentUpon>addComponent.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="addMachine.resx">
-      <DependentUpon>addMachine.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="addOption.resx">
-      <DependentUpon>addOption.cs</DependentUpon>
+    <EmbeddedResource Include="addEditOptionForm.resx">
+      <DependentUpon>addEditOptionForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Configurator.resx">
       <DependentUpon>Configurator.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="databaseViewer.resx">
+      <DependentUpon>databaseViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="helpForm.resx">
       <DependentUpon>helpForm.cs</DependentUpon>
@@ -225,8 +222,11 @@
     <EmbeddedResource Include="LoadingForm.resx">
       <DependentUpon>LoadingForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="machineSearch.resx">
-      <DependentUpon>machineSearch.cs</DependentUpon>
+    <EmbeddedResource Include="newCompDataForm.resx">
+      <DependentUpon>newCompDataForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="newOptionGroupForm.resx">
+      <DependentUpon>newOptionGroupForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
